[project]
name = "meshchainbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fake-useragent>=1.5.1",
    "httpx>=0.27.2",
    "humanize>=4.11.0",
    "loguru>=0.7.2",
    "mtprotocrypt>=1.2.6.5b0",
    "pydantic>=2.9.2",
    "pyenvloadermeta>=1.0.2",
    "pyrogram>=2.0.106",
    "rich>=13.9.4",
    "tgcrypto>=1.2.5",
    "timecalculator>=1.2.1",
]
